--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@nqduy1805/api-zalo",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "connect to api tiwtter",
   "main": "lib/index.js",
   "scripts": {
@@ -27,9 +27,10 @@
     "@libphamton/client-fb": "github:libphamton/client-fb",
     "@libphamton/fb-group": "^1.0.2",
     "@nqduy1805/api-gmail": "^1.0.1",
-    "@nqduy1805/api-gmail-ai": "^1.0.0",
-    "@nqduy1805/api-send-email": "^1.0.0",
-    "@nqduy1805/api-send-gmail": "^1.0.1",
+    "@nqduy1805/api-gmail-ai": "^1.0.2",
+    "@nqduy1805/api-send-email": "^1.0.1",
+    "@nqduy1805/api-send-gmail": "^1.0.2",
+    "@nqduy1805/api-zalo": "^1.0.0",
     "@oraliepham/api-chat-fanpage-facebook": "^1.2.4",
     "@oraliepham/api-facebooknew": "^1.0.5",
     "api-chat-fanpage-facebook": "^1.2.2",
